<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#081734"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/playButton"
        android:layout_width="242dp"
        android:layout_height="88dp"
        android:background="@drawable/bttn_border"
        android:fontFamily="@font/youre_gone"
        android:onClick="startSinglePlayerGame"
        android:shadowColor="#e7b4f8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="3"
        android:text="@string/single_player"
        android:textAllCaps="false"
        android:textColor="#9215C0"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438" />

    <Button
        android:id="@+id/multiplayerButton"
        android:layout_width="242dp"
        android:layout_height="88dp"
        android:background="@drawable/bttn_border"
        android:fontFamily="@font/youre_gone"
        android:onClick="startMultiplayerGame"
        android:shadowColor="#e7b4f8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="3"
        android:text="@string/multiplayer"
        android:textAllCaps="false"
        android:textColor="#9215C0"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.601" />

    <Button
        android:id="@+id/instructionsButton"
        android:layout_width="242dp"
        android:layout_height="88dp"
        android:background="@drawable/bttn_border"
        android:fontFamily="@font/youre_gone"
        android:onClick="readInstructions"
        android:shadowColor="#e7b4f8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="3"
        android:text="@string/instructions"
        android:textAllCaps="false"
        android:textColor="#9215C0"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.899" />

    <TextView
        android:id="@+id/title"
        android:layout_width="285dp"
        android:layout_height="83dp"
        android:background="@drawable/title_colored"
        android:hint="@string/tic_tac_toe"
        android:textColor="#FFFFFF"
        android:textColorHint="#00FFFFFF"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214" />

</androidx.constraintlayout.widget.ConstraintLayout>